<resources>
    <string name="app_name">WalletTest</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_transfer_btc">Transfer</string>
    <string name="title_receive_btc">Receive</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_receive_fragment">Hello receive fragment</string>
    <string name="hello_wallet_fragment">Hello wallet fragment</string>
    <string name="hello_transfer_fragment">Hello transfer fragment</string>
    <string name="action_settings">Settings</string>
    <string name="wallet_balance">Balance</string>
    <string name="balance_in_btc">BTC</string>
    <string name="available_balance">Available</string>
    <string name="expected_balance">Expected</string>
    <string name="recent_transactions">Recent transactions:</string>
    <string name="destination_address">Destination address</string>
    <string name="amount">Amount</string>
    <string name="your_receive_address">Your receive address:</string>
    <string name="your_receive_address_value">Your receive address value.</string>
    <string name="user_qr_code">User qr code.</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_enter">Enter or create wallet</string>
    <string name="your_wallet_seed_or_mnemonic_code">Your wallet seed or mnemonic code</string>
    <string name="create_new_wallet">Create new wallet</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_settings">Settings</string>

    <string-array name="settings_entries">
        <item>All of used addresses</item>
    </string-array>
    <string name="loading">Loading</string>
    <string name="exit_from_wallet">Exit from wallet</string>
    <string name="all_of_used_addresses">All of used addresses:</string>
</resources>
