<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_transfer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.masic.bwallet.main.fragments.transfer.TransferFragment">

    <LinearLayout
        android:id="@+id/ll_destination_address_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_between_content_areas_8dp"
        android:layout_marginTop="@dimen/space_between_content_areas_8dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/space_between_content_areas_8dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/et_destination_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/destination_address"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/iv_destination_qr_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/space_between_content_areas_8dp"
            app:srcCompat="@drawable/ic_qr_code" />
    </LinearLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ll_destination_address_layout">

        <EditText
            android:id="@+id/et_transfer_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/b_confirm_transfer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/confirm" />

</RelativeLayout>
