<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".login.LoginActivity">
    <ProgressBar
        android:id="@+id/pb_login_progress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:clickable="false"/>

    <ScrollView
        android:id="@+id/sv_enter_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_bitcoin_logo"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:src="@drawable/ic_bitcoin_logo_24dp" />

            <EditText
                android:id="@+id/et_wallet_seed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_wallet_seed_or_mnemonic_code" />

            <LinearLayout
                android:id="@+id/ll_create_new_wallet_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_between_content_areas_8dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_create_new_wallet_arrow"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_arrow_forward_black_24dp" />

                <TextView
                    android:id="@+id/tv_create_new_wallet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/create_new_wallet" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"/>

            <Button
                android:id="@+id/b_confirm_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/confirm"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
